kube/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-django
  labels:
    app: messaging
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: messaging
        part: django
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: messaging-django-static
        - name: media
          persistentVolumeClaim:
            claimName: messaging-django-media
        - name: google-bm-creds
          secret:
            secretName: messaging-google-bm-creds
        - name: google-vsms-creds
          secret:
            secretName: messaging-google-vsms-creds
      containers:
        - name: gunicorn
          image: as207960/messaging-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_messaging.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
            - mountPath: "/google-bm-creds/"
              name: google-bm-creds
            - mountPath: "/google-vsms-creds/"
              name: google-vsms-creds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-celery
  labels:
    app: messaging
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: messaging
        part: celery
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: messaging-django-static
        - name: media
          persistentVolumeClaim:
            claimName: messaging-django-media
        - name: google-bm-creds
          secret:
            secretName: messaging-google-bm-creds
        - name: google-vsms-creds
          secret:
            secretName: messaging-google-vsms-creds
      containers:
        - name: celery
          image: as207960/messaging-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["celery",  "-A", "as207960_messaging", "worker", "--loglevel=INFO", "-c", "32"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
            - mountPath: "/google-bm-creds/"
              name: google-bm-creds
            - mountPath: "/google-vsms-creds/"
              name: google-vsms-creds
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-django
  labels:
    app: messaging
    part: django
spec:
  selector:
    app: messaging
    part: django
  ports:
    - port: 8000
      targetPort: 8000
      name: gunicorn
