kube/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-nginx
  labels:
    app: billing
    part: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: billing
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: billing-django-static
        - name: media
          persistentVolumeClaim:
            claimName: billing-django-media
        - name: conf
          configMap:
            name: billing-nginx-conf
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/data/media/"
              name: media
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
            - mountPath: "/data/static/apple-developer-merchantid-domain-association"
              name: conf
              subPath: "apple-pay"
---
apiVersion: v1
kind: Service
metadata:
  name: billing-nginx
  labels:
    app: billing
    part: nginx
spec:
  selector:
    app: billing
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - billing.as207960.net
      secretName: cls-tls
  rules:
  - host: billing.as207960.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-nginx
            port:
              number: 80
